--- a/style.css
+++ b/style.css
@@ -1,7 +1,39 @@
 /* style sheet */
+html {
+    box-sizing: border-box;
+}
 
-body{background-color: lightblue;}
+body{
+    background-color: lightblue;
+    margin: 50px;
+}
 h1 {
     color: navy;
-    margin-left: 20px;
+    
   }
+
+a[href = "https://vinc3isaac18.github.io"] { 
+    text-decoration: none;
+    background-color:green;
+    color: white;
+    padding: 5px;
+}
+
+a:hover{ 
+    background-color:gray;
+    color: white;
+}
+
+.box {
+    border: 5px solid rebeccapurple;
+    background-color: lightgray;
+    padding: 40px;
+    margin: 40px;
+    width: 300px;
+    height: 150px;
+}
+  
+.alternate {
+    box-sizing: border-box;
+}
+      
