--- a/module 3/mystyles.css
+++ b/module 3/mystyles.css
@@ -10,7 +10,7 @@ body {
     background-color: #fff;
     color: #333;
     font: 1.2em / 1.5 Helvetica Neue, Helvetica, Arial, sans-serif;
-    padding: 0;
+    padding: 30px;
     margin: 0;
 }
 
